menu responsive to smaller screens

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <body>
     <section class="sidebar">
         <div class="logo-container">
-            <div>Gate Gourmet</div>
+            <div class="d-none d-lg-block">Gate Gourmet</div>
+            <div class="d-lg-none">GG</div>
         </div>
         <div class="menu">
             <ul>
