--- a/index.html
+++ b/index.html
@@ -36,14 +36,19 @@
                     <i class="fa-solid fa-trash">&nbsp;</i>
                     <span>Garbage Control</span>
                 </li>
-             
+
             </ul>
         </div>
 
     </section>
 
     <section class="topbar">
-
+        <div class="breadcrumb">
+            <div class="position">\\...\
+                <i class="fa-solid fa-house"></i>
+                <span>Home</span>&nbsp;\
+            </div>
+        </div>
     </section>
 
     <section class="content-wrapper">
